--- a/_assets/sass/base/elements/_body.scss
+++ b/_assets/sass/base/elements/_body.scss
@@ -73,7 +73,7 @@ body {
 	.blog &,
 	.archive & {
 		max-width: 75em;
-		padding: 2.5em;
+		padding: 5rem 2.5rem 2.5rem;
 
 		@media (min-width:900px) {
 			padding-top: 13.5rem;
