--- a/_assets/sass/components/widgets/_widgets.scss
+++ b/_assets/sass/components/widgets/_widgets.scss
@@ -7,12 +7,12 @@
 	}
 
 	.widget-title {
-		font-size: 2.571em;
+		font-size: 2.25rem;
 		line-height: normal;
-		margin-bottom: .6667em;
+		margin-bottom: 1.5rem;
 	}
 
-	.subtitle {
+	.subhead {
 		color: $yellow;
 		font-size: 1em;
 		letter-spacing: 6px;
