--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://underscores.me/
 Author: Afflecto Media Marketing
 Author URI: https://afflectomm.com/
 Description: Description
-Version: 0.9.7
+Version: 0.9.8
 Tested up to: 5.4
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
@@ -520,7 +520,7 @@ body {
   .blog .site-main,
   .archive .site-main {
     max-width: 75em;
-    padding: 2.5em; }
+    padding: 5rem 2.5rem 2.5rem; }
     @media (min-width: 900px) {
       .blog .site-main,
       .archive .site-main {
@@ -1063,98 +1063,101 @@ button.site-nav__btn {
   position: relative;
   z-index: 1; }
 
-.blog .articles-wrapper .post,
-.blog .lead-blog-post .post {
+.articles-wrapper .post,
+.lead-blog-post .post {
   background: #384f5b;
   width: 100%;
   margin-bottom: 2.5em; }
-  .blog .articles-wrapper .post:after,
-  .blog .lead-blog-post .post:after {
+  .articles-wrapper .post:after,
+  .lead-blog-post .post:after {
     content: "";
     display: table;
     clear: both; }
-  .blog .articles-wrapper .post:hover,
-  .blog .lead-blog-post .post:hover {
+  .articles-wrapper .post:hover,
+  .lead-blog-post .post:hover {
     background-color: #4b6a7b; }
-  .blog .articles-wrapper .post a,
-  .blog .lead-blog-post .post a {
+  .articles-wrapper .post a,
+  .lead-blog-post .post a {
     text-decoration: none; }
-  .blog .articles-wrapper .post .content,
-  .blog .lead-blog-post .post .content {
+  .articles-wrapper .post .content,
+  .lead-blog-post .post .content {
     position: relative;
     height: 100%; }
-    .blog .articles-wrapper .post .content .entry-header,
-    .blog .lead-blog-post .post .content .entry-header {
-      padding-top: 0; }
-  .blog .articles-wrapper .post.has-post-thumbnail .content,
-  .blog .lead-blog-post .post.has-post-thumbnail .content {
+    .articles-wrapper .post .content .entry-header,
+    .lead-blog-post .post .content .entry-header {
+      padding-top: 0;
+      margin-top: 0;
+      margin-right: 0;
+      margin-left: 0; }
+  .articles-wrapper .post.has-post-thumbnail .content,
+  .lead-blog-post .post.has-post-thumbnail .content {
     width: auto; }
     @media screen and (min-width: 600px) {
-      .blog .articles-wrapper .post.has-post-thumbnail .content,
-      .blog .lead-blog-post .post.has-post-thumbnail .content {
+      .articles-wrapper .post.has-post-thumbnail .content,
+      .lead-blog-post .post.has-post-thumbnail .content {
         height: 100%; } }
-  .blog .articles-wrapper .post .thumbnail,
-  .blog .lead-blog-post .post .thumbnail {
+  .articles-wrapper .post .thumbnail,
+  .lead-blog-post .post .thumbnail {
     width: 100%; }
     @media screen and (min-width: 600px) {
-      .blog .articles-wrapper .post .thumbnail,
-      .blog .lead-blog-post .post .thumbnail {
+      .articles-wrapper .post .thumbnail,
+      .lead-blog-post .post .thumbnail {
         width: 50%;
         height: 100%;
         background-size: cover; } }
 
-.blog .articles-wrapper .byline,
-.blog .articles-wrapper .posted-on,
-.blog .articles-wrapper .cat-links,
-.blog .articles-wrapper .tags-links,
-.blog .lead-blog-post .byline,
-.blog .lead-blog-post .posted-on,
-.blog .lead-blog-post .cat-links,
-.blog .lead-blog-post .tags-links {
+.articles-wrapper .byline,
+.articles-wrapper .posted-on,
+.articles-wrapper .cat-links,
+.articles-wrapper .tags-links,
+.lead-blog-post .byline,
+.lead-blog-post .posted-on,
+.lead-blog-post .cat-links,
+.lead-blog-post .tags-links {
   display: block;
   color: rgba(255, 255, 255, 0.7);
   opacity: .7;
   font-size: .875rem;
   line-height: 1.5; }
-  .blog .articles-wrapper .byline a,
-  .blog .articles-wrapper .posted-on a,
-  .blog .articles-wrapper .cat-links a,
-  .blog .articles-wrapper .tags-links a,
-  .blog .lead-blog-post .byline a,
-  .blog .lead-blog-post .posted-on a,
-  .blog .lead-blog-post .cat-links a,
-  .blog .lead-blog-post .tags-links a {
+  .articles-wrapper .byline a,
+  .articles-wrapper .posted-on a,
+  .articles-wrapper .cat-links a,
+  .articles-wrapper .tags-links a,
+  .lead-blog-post .byline a,
+  .lead-blog-post .posted-on a,
+  .lead-blog-post .cat-links a,
+  .lead-blog-post .tags-links a {
     color: rgba(255, 255, 255, 0.7);
     opacity: inherit;
     text-decoration: none; }
-    .blog .articles-wrapper .byline a:hover, .blog .articles-wrapper .byline a:focus,
-    .blog .articles-wrapper .posted-on a:hover,
-    .blog .articles-wrapper .posted-on a:focus,
-    .blog .articles-wrapper .cat-links a:hover,
-    .blog .articles-wrapper .cat-links a:focus,
-    .blog .articles-wrapper .tags-links a:hover,
-    .blog .articles-wrapper .tags-links a:focus,
-    .blog .lead-blog-post .byline a:hover,
-    .blog .lead-blog-post .byline a:focus,
-    .blog .lead-blog-post .posted-on a:hover,
-    .blog .lead-blog-post .posted-on a:focus,
-    .blog .lead-blog-post .cat-links a:hover,
-    .blog .lead-blog-post .cat-links a:focus,
-    .blog .lead-blog-post .tags-links a:hover,
-    .blog .lead-blog-post .tags-links a:focus {
+    .articles-wrapper .byline a:hover, .articles-wrapper .byline a:focus,
+    .articles-wrapper .posted-on a:hover,
+    .articles-wrapper .posted-on a:focus,
+    .articles-wrapper .cat-links a:hover,
+    .articles-wrapper .cat-links a:focus,
+    .articles-wrapper .tags-links a:hover,
+    .articles-wrapper .tags-links a:focus,
+    .lead-blog-post .byline a:hover,
+    .lead-blog-post .byline a:focus,
+    .lead-blog-post .posted-on a:hover,
+    .lead-blog-post .posted-on a:focus,
+    .lead-blog-post .cat-links a:hover,
+    .lead-blog-post .cat-links a:focus,
+    .lead-blog-post .tags-links a:hover,
+    .lead-blog-post .tags-links a:focus {
       color: #fff;
       text-decoration: underline; }
 
-.blog .articles-wrapper .author,
-.blog .lead-blog-post .author {
+.articles-wrapper .author,
+.lead-blog-post .author {
   font-weight: bold; }
 
-.blog .articles-wrapper .cats-tags,
-.blog .lead-blog-post .cats-tags {
+.articles-wrapper .cats-tags,
+.lead-blog-post .cats-tags {
   padding-bottom: .25em; }
 
-.blog .articles-wrapper .clickthrough,
-.blog .lead-blog-post .clickthrough {
+.articles-wrapper .clickthrough,
+.lead-blog-post .clickthrough {
   position: absolute;
   bottom: 2.0833em;
   margin-bottom: 0;
@@ -1162,42 +1165,46 @@ button.site-nav__btn {
   text-transform: uppercase;
   letter-spacing: 4.5px; }
 
-.blog .lead-blog-post .post {
+.lead-blog-post .post {
   display: table; }
 
-.blog .lead-blog-post .content {
+.lead-blog-post .content {
   display: block;
   width: 100%;
   padding: 2.25rem 2.5rem; }
-  .blog .lead-blog-post .content a {
+  .lead-blog-post .content a {
     text-decoration: none; }
-    .blog .lead-blog-post .content a:hover {
+    .lead-blog-post .content a:hover {
       color: #dba62a;
       text-decoration: underline; }
-  .blog .lead-blog-post .content h3.entry-title > a {
-    color: #ffffff; }
-  .blog .lead-blog-post .content .excerpt {
+  .lead-blog-post .content h3.entry-title > a {
+    color: #ffffff;
+    margin-bottom: 0; }
+    .lead-blog-post .content h3.entry-title > a:hover {
+      color: #dba62a;
+      text-decoration: underline; }
+  .lead-blog-post .content .excerpt {
     line-spacing: .53px;
     margin-bottom: 4.625rem; }
   @media screen and (min-width: 600px) {
-    .blog .lead-blog-post .content {
+    .lead-blog-post .content {
       display: table-cell;
       height: 100%;
       float: left; } }
 
-.blog .lead-blog-post .posted-on {
+.lead-blog-post .posted-on {
   padding-bottom: 1.5rem; }
 
-.blog .lead-blog-post .thumbnail {
+.lead-blog-post .thumbnail {
   display: block;
   height: 25rem; }
   @media screen and (min-width: 600px) {
-    .blog .lead-blog-post .thumbnail {
+    .lead-blog-post .thumbnail {
       display: table-cell;
       height: 100%; } }
 
 @media screen and (min-width: 600px) {
-  .blog .articles-wrapper {
+  .articles-wrapper {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-direction: row;
@@ -1211,95 +1218,95 @@ button.site-nav__btn {
     -ms-flex-align: stretch;
         align-items: stretch; } }
 
-.blog .articles-wrapper .post {
+.articles-wrapper .post {
   background: #384f5b;
   width: 100%;
   margin-bottom: 2.5em; }
-  .blog .articles-wrapper .post:after {
+  .articles-wrapper .post:after {
     content: "";
     display: table;
     clear: both; }
-  .blog .articles-wrapper .post:hover {
+  .articles-wrapper .post:hover {
     background-color: #4b6a7b; }
   @media screen and (min-width: 600px) {
-    .blog .articles-wrapper .post {
+    .articles-wrapper .post {
       width: 45.5%; } }
   @media screen and (min-width: 900px) {
-    .blog .articles-wrapper .post {
+    .articles-wrapper .post {
       width: 30%; } }
   @media screen and (min-width: 1200px) {
-    .blog .articles-wrapper .post {
+    .articles-wrapper .post {
       width: 23%; } }
-  .blog .articles-wrapper .post .content {
+  .articles-wrapper .post .content {
     position: relative;
     padding: 1.5em 1.786em 1.786em;
     height: 100%; }
-    .blog .articles-wrapper .post .content .entry-header {
+    .articles-wrapper .post .content .entry-header {
       padding-top: 0; }
   @media screen and (min-width: 600px) {
-    .blog .articles-wrapper .post.has-post-thumbnail {
+    .articles-wrapper .post.has-post-thumbnail {
       width: 100%; } }
   @media screen and (min-width: 900px) {
-    .blog .articles-wrapper .post.has-post-thumbnail {
+    .articles-wrapper .post.has-post-thumbnail {
       width: 65%; } }
   @media screen and (min-width: 1200px) {
-    .blog .articles-wrapper .post.has-post-thumbnail {
+    .articles-wrapper .post.has-post-thumbnail {
       width: 48.6667%; } }
-  .blog .articles-wrapper .post.has-post-thumbnail .content {
+  .articles-wrapper .post.has-post-thumbnail .content {
     width: auto; }
     @media screen and (min-width: 600px) {
-      .blog .articles-wrapper .post.has-post-thumbnail .content {
+      .articles-wrapper .post.has-post-thumbnail .content {
         width: 50%;
         height: 100%;
         float: left; } }
-  .blog .articles-wrapper .post .entry-title {
+  .articles-wrapper .post .entry-title {
     margin-bottom: 46px; }
-  .blog .articles-wrapper .post .thumbnail {
+  .articles-wrapper .post .thumbnail {
     display: block;
     height: 15em; }
     @media screen and (min-width: 600px) {
-      .blog .articles-wrapper .post .thumbnail {
+      .articles-wrapper .post .thumbnail {
         width: 50%;
         float: right;
         height: 100%;
         background-size: cover; } }
 
-.blog .articles-wrapper .byline,
-.blog .articles-wrapper .posted-on,
-.blog .articles-wrapper .cat-links,
-.blog .articles-wrapper .tags-links {
+.articles-wrapper .byline,
+.articles-wrapper .posted-on,
+.articles-wrapper .cat-links,
+.articles-wrapper .tags-links {
   display: block;
   color: rgba(255, 255, 255, 0.7);
   opacity: .7;
   font-size: .875rem;
   line-height: 1.5; }
-  .blog .articles-wrapper .byline a,
-  .blog .articles-wrapper .posted-on a,
-  .blog .articles-wrapper .cat-links a,
-  .blog .articles-wrapper .tags-links a {
+  .articles-wrapper .byline a,
+  .articles-wrapper .posted-on a,
+  .articles-wrapper .cat-links a,
+  .articles-wrapper .tags-links a {
     color: rgba(255, 255, 255, 0.7);
     opacity: inherit;
     text-decoration: none; }
-    .blog .articles-wrapper .byline a:hover, .blog .articles-wrapper .byline a:focus,
-    .blog .articles-wrapper .posted-on a:hover,
-    .blog .articles-wrapper .posted-on a:focus,
-    .blog .articles-wrapper .cat-links a:hover,
-    .blog .articles-wrapper .cat-links a:focus,
-    .blog .articles-wrapper .tags-links a:hover,
-    .blog .articles-wrapper .tags-links a:focus {
+    .articles-wrapper .byline a:hover, .articles-wrapper .byline a:focus,
+    .articles-wrapper .posted-on a:hover,
+    .articles-wrapper .posted-on a:focus,
+    .articles-wrapper .cat-links a:hover,
+    .articles-wrapper .cat-links a:focus,
+    .articles-wrapper .tags-links a:hover,
+    .articles-wrapper .tags-links a:focus {
       color: #fff;
       text-decoration: underline; }
 
-.blog .articles-wrapper .author {
+.articles-wrapper .author {
   font-weight: bold; }
 
-.blog .articles-wrapper .posted-on {
+.articles-wrapper .posted-on {
   padding-bottom: 1.2em; }
 
-.blog .articles-wrapper .cats-tags {
+.articles-wrapper .cats-tags {
   padding-bottom: .25em; }
 
-.blog .articles-wrapper .clickthrough {
+.articles-wrapper .clickthrough {
   position: absolute;
   bottom: 2.0833em;
   margin-bottom: 0;
@@ -1307,16 +1314,32 @@ button.site-nav__btn {
   text-transform: uppercase;
   letter-spacing: 4.5px; }
 
-.entry-title {
+.single .entry-title {
   color: #ffffff;
   letter-spacing: normal;
-  line-height: 1.25; }
+  line-height: 1.25;
+  margin: 0 40px 3rem; }
+  @media screen and (min-width: 900px) {
+    .single .entry-title {
+      margin: 0 0 3rem; } }
 
 h1.entry-title {
-  font-size: 5em; }
+  font-size: 4.375rem; }
+
+h2 {
+  font-size: 2.25rem;
+  margin: 0 0 1.5rem;
+  color: #ffffff; }
 
 h3.entry-title {
   font-size: 1.425rem; }
+
+.subhead {
+  font-size: 1rem;
+  color: #f7bf3b;
+  letter-spacing: 6px;
+  text-transform: uppercase;
+  margin: 0 0 0.5rem; }
 
 .single .post-main {
   background: #15232a;
@@ -1344,7 +1367,7 @@ h3.entry-title {
 
 /* PAGES */
 .page-title {
-  font-size: 5.5em;
+  font-size: 4.875rem;
   line-height: 1.04; }
 
 /* HOME PAGE */
@@ -1670,10 +1693,10 @@ h3.entry-title {
   .widget select {
     max-width: 100%; }
   .widget .widget-title {
-    font-size: 2.571em;
+    font-size: 2.25rem;
     line-height: normal;
-    margin-bottom: .6667em; }
-  .widget .subtitle {
+    margin-bottom: 1.5rem; }
+  .widget .subhead {
     color: #f7bf3b;
     font-size: 1em;
     letter-spacing: 6px;
