article blocks had wrong color when hovering.

--- a/_assets/sass/components/content/_posts-and-pages.scss
+++ b/_assets/sass/components/content/_posts-and-pages.scss
@@ -182,7 +182,8 @@
 		margin-bottom: 2.5em;
 		@include clearfix();
 
-		&:hover {
+		&:hover,
+		&:focus {
 			background-color: $background-highlight-hover;
 		}
 
@@ -279,7 +280,8 @@
 		a {
 			text-decoration: none;
 
-			&:hover {
+			&:hover,
+			&:focus {
 				color: $color__link-hover;
 				text-decoration: underline;
 			}
@@ -289,7 +291,8 @@
 			color: #ffffff;
 			margin-bottom: 0;
 
-			&:hover {
+			&:hover,
+			&:focus {
 				color: $color__link-hover;
 				text-decoration: underline;
 			}
@@ -363,6 +366,16 @@
 
 			.entry-header {
 				padding-top: 0;
+			}
+
+			h3.entry-title {
+				color: #ffffff;
+
+				&:hover,
+				&:focus {
+					color: $yellow;
+					text-decoration: underline;
+				}
 			}
 		}
 
