--- a/_assets/sass/components/navigation/_navigation.scss
+++ b/_assets/sass/components/navigation/_navigation.scss
@@ -142,7 +142,8 @@ button.site-nav__btn {
 	transition: opacity .3s cubic-bezier(.165,.84,.44,1);
 	z-index: 10;
 
-	&:hover {
+	&:hover,
+	&:focus {
 		cursor: pointer;
 	}
 
