--- a/_assets/sass/base/elements/_body.scss
+++ b/_assets/sass/base/elements/_body.scss
@@ -77,6 +77,11 @@ body {
 
 		@media (min-width:900px) {
 			padding-top: 13.5rem;
+			padding-bottom: 4rem;
+		}
+
+		@media (min-width:1100px) {
+			padding-bottom: 6rem;
 		}
 	}
 }
