--- a/style.css
+++ b/style.css
@@ -524,7 +524,12 @@ body {
     @media (min-width: 900px) {
       .blog .site-main,
       .archive .site-main {
-        padding-top: 13.5rem; } }
+        padding-top: 13.5rem;
+        padding-bottom: 4rem; } }
+    @media (min-width: 1100px) {
+      .blog .site-main,
+      .archive .site-main {
+        padding-bottom: 6rem; } }
 
 .thirty-five-em {
   width: 100%;
@@ -1702,16 +1707,23 @@ h3.entry-title {
     font-size: 2.25rem;
     line-height: normal;
     margin-bottom: 1.5rem; }
-  .widget .subhead {
+  .widget.widget_recent_entries .subhead {
     color: #f7bf3b;
     font-size: 1em;
     letter-spacing: 6px;
     text-transform: uppercase;
     padding-bottom: 0;
     margin-bottom: 0; }
+  .widget.widget_recent_entries .entry-title {
+    margin-left: 0;
+    margin-right: 0; }
 
 .widget-area {
-  padding-top: 6em; }
+  padding-top: 6em;
+  margin: 0 40px; }
+  @media screen and (min-width: 900px) {
+    .widget-area {
+      margin: 0; } }
 
 /* Media
 --------------------------------------------- */
