--- a/_assets/sass/base/typography/_copy.scss
+++ b/_assets/sass/base/typography/_copy.scss
@@ -59,7 +59,7 @@ big {
 		margin: 0 42px 0 49px;
 		position: relative;
 
-		@media (min-width: 900px) {
+		@media screen and (min-width: 900px) {
 			margin: 0 65px 0 72px;
 		}
 
@@ -72,7 +72,7 @@ big {
 			height: 27px;
 			position: absolute;
 
-			@media (min-width: 900px) {
+			@media screen and (min-width: 900px) {
 				background-size: 58px 44px;
 				width: 58px;
 				height: 44px;
@@ -84,7 +84,7 @@ big {
 			top: 7px;
 			left: -49px;
 
-			@media (min-width: 900px) {
+			@media screen and (min-width: 900px) {
 				left: -72px;
 			}
 		}
@@ -94,7 +94,7 @@ big {
 			bottom: 7px;
 			right: -42px;
 
-			@media (min-width: 900px) {
+			@media screen and (min-width: 900px) {
 				right: -65px;
 			}
 		}
