--- a/_assets/sass/components/navigation/_navigation.scss
+++ b/_assets/sass/components/navigation/_navigation.scss
@@ -6,7 +6,7 @@
 	right: 0;
 	padding-right: 0;
 
-	@media (min-width: 900px) {
+	@media screen and (min-width: 900px) {
 		top: 32px;
 		right: 2.14em;
 	}
