--- a/_assets/sass/plugins/_testimonial-rotator.scss
+++ b/_assets/sass/plugins/_testimonial-rotator.scss
@@ -25,7 +25,7 @@
 		height: 27px;
 		position: absolute;
 
-		@media (min-width: 900px) {
+		@media screen and (min-width: 900px) {
 			background-size: 58px 44px;
 			width: 58px;
 			height: 44px;
@@ -37,7 +37,7 @@
 		top: 7px;
 		left: -49px;
 
-		@media (min-width: 900px) {
+		@media screen and (min-width: 900px) {
 			left: -72px;
 		}
 	}
@@ -47,7 +47,7 @@
 		bottom: 7px;
 		right: -42px;
 
-		@media (min-width: 900px) {
+		@media screen and (min-width: 900px) {
 			right: -65px;
 		}
 	}
